--- a/lighthr/pages/projects/add-request.html
+++ b/lighthr/pages/projects/add-request.html
@@ -560,7 +560,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-6">
+                                <!-- <div class="col-sm-6">
                                     <div class="form-group">
                                         <select class="col-12 m-t-20 p-l-0">
                                             <option value="" disabled selected>Applied To</option>
@@ -570,14 +570,22 @@
                                             <option value="4">James</option>
                                         </select>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="row clearfix">
-                                <div class="col-sm-6">
+                                </div> -->
+                            <!-- </div>
+                            <div class="row clearfix"> -->
+                                <!-- <div class="col-sm-6">
                                     <div class="form-group">
                                         <div class="form-group">
                                             <input type="text" class="form-control datetimepicker"
                                                 placeholder="Approve date" name="date1" id="date1">
+                                        </div>
+                                    </div>
+                                </div> -->
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control"
+                                                placeholder="Entity Name" name="Entity Name">
                                         </div>
                                     </div>
                                 </div>
@@ -587,7 +595,7 @@
                                     <div class="form-group">
                                         <div class="form-line">
                                             <textarea rows="4" class="form-control no-resize"
-                                                placeholder="Remark"></textarea>
+                                                placeholder="Comments"></textarea>
                                         </div>
                                     </div>
                                 </div>
