--- a/lighthr/pages/projects/add-request.html
+++ b/lighthr/pages/projects/add-request.html
@@ -601,7 +601,8 @@
                                 </div>
                             </div>
                             <div class="col-lg-12 p-t-20 text-center">
-                                <button type="button" class="btn btn-primary waves-effect m-r-15">Submit</button>
+                                <button type="button" class="btn btn-primary waves-effect m-r-15" data-bs-toggle="modal"
+                                data-bs-target="#basicModal">Submit</button>
                                 <a href="all-services.html" class="btn btn-danger waves-effect">Cancel</a>
                             </div>
                         </div>
@@ -610,6 +611,36 @@
             </div>
         </div>
     </section>
+    <!-- #START# Basic Modal -->
+    <div class="modal fade quick-modal" id="basicModal" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content p-0">
+                <div class="modal-header column-flx">
+                    <span class="megaIcon">
+                        <i class="fas fa-check-circle"></i>
+                    </span>
+                    <h5 class="modal-title" id="exampleModalLabel">Success! </h5>
+                    <button type="button" class="close" data-bs-dismiss="modal"
+                        aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Thanks you for submitting. we will get back to you shortly.
+                    <!-- <p>Reference No: <strong>#456789</strong></p> -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button"
+                        class="btn btn-info waves-effect" data-bs-dismiss="modal">Continue</button>
+                    <!-- <button type="button" class="btn btn-danger waves-effect"
+                        data-bs-dismiss="modal">Cancel</button> -->
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- #END# Basic Modal -->
+
     <script src="../../assets/js/common.min.js"></script>
     <script src="../../assets/js/bundles/flatpickr.min.js"></script>
     <!-- Custom Js -->
